fix(material-experimental/theming): align fab with M3 spec
* Fixes that we weren't emitting the height and shape tokens for the extended FAB which in turn prevented the M3 tokens from working.
* Fixes that all FAB variants were using the wrong color for the state layer, causing it to blend in with the background.

--- a/src/material-experimental/theming/_custom-tokens.scss
+++ b/src/material-experimental/theming/_custom-tokens.scss
@@ -321,7 +321,7 @@
 @function fab($systems, $exclude-hardcoded) {
   @return ((
     foreground-color: map.get($systems, md-sys-color, on-primary-container),
-    state-layer-color: map.get($systems, md-sys-color, primary-container),
+    state-layer-color: map.get($systems, md-sys-color, on-primary-container),
     ripple-color: mat.private-safe-color-change(
       map.get($systems, md-sys-color, on-primary-container),
       $alpha: map.get($systems, md-sys-state, pressed-state-layer-opacity)
@@ -338,7 +338,7 @@
     primary: (), // Default, no overrides needed.
     secondary: (
       foreground-color: map.get($systems, md-sys-color, on-secondary-container),
-      state-layer-color: map.get($systems, md-sys-color, secondary-container),
+      state-layer-color: map.get($systems, md-sys-color, on-secondary-container),
       ripple-color: mat.private-safe-color-change(
           map.get($systems, md-sys-color, on-secondary-container),
         $alpha: map.get($systems, md-sys-state, pressed-state-layer-opacity)
@@ -346,7 +346,7 @@
     ),
     tertiary: (
       foreground-color: map.get($systems, md-sys-color, on-tertiary-container),
-      state-layer-color: map.get($systems, md-sys-color, tertiary-container),
+      state-layer-color: map.get($systems, md-sys-color, on-tertiary-container),
       ripple-color: mat.private-safe-color-change(
           map.get($systems, md-sys-color, on-tertiary-container),
         $alpha: map.get($systems, md-sys-state, pressed-state-layer-opacity)
@@ -362,7 +362,7 @@
 @function fab-small($systems, $exclude-hardcoded) {
   @return ((
     foreground-color: map.get($systems, md-sys-color, on-primary-container),
-    state-layer-color: map.get($systems, md-sys-color, primary-container),
+    state-layer-color: map.get($systems, md-sys-color, on-primary-container),
     ripple-color: mat.private-safe-color-change(
       map.get($systems, md-sys-color, on-primary-container),
       $alpha: map.get($systems, md-sys-state, pressed-state-layer-opacity)
@@ -379,7 +379,7 @@
     primary: (), // Default, no overrides needed.
     secondary: (
       foreground-color: map.get($systems, md-sys-color, on-secondary-container),
-      state-layer-color: map.get($systems, md-sys-color, secondary-container),
+      state-layer-color: map.get($systems, md-sys-color, on-secondary-container),
       ripple-color: mat.private-safe-color-change(
           map.get($systems, md-sys-color, on-secondary-container),
         $alpha: map.get($systems, md-sys-state, pressed-state-layer-opacity)
@@ -387,7 +387,7 @@
     ),
     tertiary: (
       foreground-color: map.get($systems, md-sys-color, on-tertiary-container),
-      state-layer-color: map.get($systems, md-sys-color, tertiary-container),
+      state-layer-color: map.get($systems, md-sys-color, on-tertiary-container),
       ripple-color: mat.private-safe-color-change(
           map.get($systems, md-sys-color, on-tertiary-container),
         $alpha: map.get($systems, md-sys-state, pressed-state-layer-opacity)
